@@ -1,6 +1,7 @@
 2004-04-27  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gdk/Threads.xml: document
+	* en/Gtk/TreeSelection.xml: add example
 
 2004-04-12  Mike Kestner  <mkestner@ximian.com>
 
